--- a/2DO-Client/Views/AddTaskWindowViews/ConnectTaskToCategoryWindowView.xaml
+++ b/2DO-Client/Views/AddTaskWindowViews/ConnectTaskToCategoryWindowView.xaml
@@ -114,7 +114,7 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
-        <ListBox Style="{DynamicResource MainListBoxStyle}" Grid.Row="0" Grid.Column="0" ItemsSource="{Binding TaskModels}" SelectedItem="{Binding SelectedItem}" Background="White" Foreground="Gray" Margin="10 10 10 10">
+        <ListBox ScrollViewer.HorizontalScrollBarVisibility="Disabled" Style="{DynamicResource MainListBoxStyle}" Grid.Row="0" Grid.Column="0" ItemsSource="{Binding TaskModels}" SelectedItem="{Binding SelectedItem}" Background="White" Foreground="Gray" Margin="10 10 10 10">
 
             <ListBox.ItemTemplate>
                 <DataTemplate>
